add play and stop button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script src="sketch.js"></script>
+    <p>Math graph sonification (under construction)</p>
   
 
 </body></html>
