--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
   </head>
   <body>
-    <script src="sketch.js"></script>
-    <p>Math graph sonification (under construction)</p>
-  
-
-</body></html>
+  	<h1>Math Graph Sonification Test</h1>
+    <h2>Training</h2>
+    <ul>
+    	<li><a href="training/01-y-equal-x.html">y = x</a></li>
+    	<li><a href="training/02-y-equal-minus-x.html">y = -x</a></li>
+    	<li><a href="training/03-y-equal-2.html">y = constant</a></li>
+    	<li><a href="training/04-y-equal-x-squared.html">y = x^2</a></li>
+    	<li><a href="training/05-y-equal-minus-x-squared.html">y = -x^2</a></li>
+    </ul>
+    <h2>Continuity</h2>
+	</body>
+</html>
