--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     	<li><a href="training/03-y-equal-2.html">y = constant</a></li>
     	<li><a href="training/04-y-equal-x-squared.html">y = x^2</a></li>
     	<li><a href="training/05-y-equal-minus-x-squared.html">y = -x^2</a></li>
+      <li><a href="training/06-y-equal-sinx.html">y = sin(x)</a></li>
     </ul>
     <h2>Continuity</h2>
 	</body>
