add removable discontinuity example 1 and 2

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     	<li><a href="training/05-y-equal-minus-x-squared.html">y = -x^2</a></li>
       <li><a href="training/06-y-equal-sinx.html">y = sin(x)</a></li>
     </ul>
-    <h2>Continuity</h2>
+    <h2>Continuity/Discontinuity</h2>
+    <h3>Removable Discontinuity</h3>
+    <ul>
+      <li><a href="continuity/01-removable1.html">Example 1</a></li>
+      <li><a href="continuity/02-removable2.html">Example 2</a></li>
+    </ul>
 	</body>
 </html>
