--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
     <h2>Continuity/Discontinuity</h2>
     <h3>Removable Discontinuity</h3>
     <ul>
-      <li><a href="continuity/01-removable1.html">Example 1</a></li>
-      <li><a href="continuity/02-removable2.html">Example 2</a></li>
+      <li><a href="continuity/removable/01.html">Example 1</a></li>
+      <li><a href="continuity/removable/02.html">Example 2</a></li>
+    </ul>
+    <h3>Jump Discontinuity</h3>
+    <ul>
+      <li><a href="continuity/jump/01.html">Example 1</a></li>
     </ul>
 	</body>
 </html>
