add infinite discontinuity example 1

--- a/continuity/infinite/01.html
+++ b/continuity/infinite/01.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <script src="01.js"></script>
-    <p>Jump Discontinuity Example 1</p>
-    <p>y=x when x<0 and y=x+2 when x>=0.</p>
+    <p>Infinite Discontinuity Example 1</p>
+    <p>y=1/(x^2)</p>
   
 
 </body></html>
