--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <h3>Jump Discontinuity</h3>
     <ul>
       <li><a href="continuity/jump/01.html">Example 1</a></li>
+      <li><a href="continuity/jump/02.html">Example 2</a></li>
+    </ul>
+    <h3>Infinite Discontinuity</h3>
+    <ul>
+      <li><a href="continuity/infinite/01.html">Example 1</a></li>
     </ul>
 	</body>
 </html>
