--- a/continuity/jump/02.html
+++ b/continuity/jump/02.html
@@ -6,9 +6,9 @@
 
   </head>
   <body>
-    <script src="01.js"></script>
-    <p>Jump Discontinuity Example 1</p>
-    <p>y=x when x<0 and y=x+2 when x>=0.</p>
+    <script src="02.js"></script>
+    <p>Jump Discontinuity Example 2</p>
+    <p>y=x^2 when x<1 and y=-x+4 when x>=1.</p>
   
 
 </body></html>
