done inifinite discontinuity examples

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
   	<h1>Math Graph Sonification Test</h1>
+
     <h2>Training</h2>
     <ul>
     	<li><a href="training/01-y-equal-x.html">y = x</a></li>
@@ -15,6 +16,7 @@
     	<li><a href="training/05-y-equal-minus-x-squared.html">y = -x^2</a></li>
       <li><a href="training/06-y-equal-sinx.html">y = sin(x)</a></li>
     </ul>
+
     <h2>Continuity/Discontinuity</h2>
     <h3>Removable Discontinuity</h3>
     <ul>
@@ -29,6 +31,9 @@
     <h3>Infinite Discontinuity</h3>
     <ul>
       <li><a href="continuity/infinite/01.html">Example 1</a></li>
+      <li><a href="continuity/infinite/02.html">Example 2</a></li>
     </ul>
+    
+    <h2>Quiz</h2>
 	</body>
 </html>
