--- a/continuity/jump/02.html
+++ b/continuity/jump/02.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
     <script src="../../p5.js"></script>
     <script src="../../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <meta charset="utf-8">
-
   </head>
   <body>
-    <script src="02.js"></script>
-    <p>Jump Discontinuity Example 2</p>
-    <p>y=x^2 when x<1 and y=-x+4 when x>=1.</p>
-  
-
-</body></html>
+  	<main id="wrapper">
+	    <script src="02.js"></script>
+	    <p>Jump Discontinuity Example 2</p>
+	    <p>y=x^2 when x<1 and y=-x+4 when x>=1.</p>
+  	</main>
+	</body>
+</html>
