--- a/index.html
+++ b/index.html
@@ -5,35 +5,37 @@
     <meta charset="utf-8">
   </head>
   <body>
-  	<h1>Math Graph Sonification Test</h1>
+    <main id="wrapper">
+    	<h1>Math Graph Sonification Test</h1>
 
-    <h2>Training</h2>
-    <ul>
-    	<li><a href="training/01-y-equal-x.html">y = x</a></li>
-    	<li><a href="training/02-y-equal-minus-x.html">y = -x</a></li>
-    	<li><a href="training/03-y-equal-2.html">y = constant</a></li>
-    	<li><a href="training/04-y-equal-x-squared.html">y = x^2</a></li>
-    	<li><a href="training/05-y-equal-minus-x-squared.html">y = -x^2</a></li>
-      <li><a href="training/06-y-equal-sinx.html">y = sin(x)</a></li>
-    </ul>
+      <h2>Training</h2>
+      <ul>
+      	<li><a href="training/01-y-equal-x.html">y = x</a></li>
+      	<li><a href="training/02-y-equal-minus-x.html">y = -x</a></li>
+      	<li><a href="training/03-y-equal-2.html">y = constant</a></li>
+      	<li><a href="training/04-y-equal-x-squared.html">y = x^2</a></li>
+      	<li><a href="training/05-y-equal-minus-x-squared.html">y = -x^2</a></li>
+        <li><a href="training/06-y-equal-sinx.html">y = sin(x)</a></li>
+      </ul>
 
-    <h2>Continuity/Discontinuity</h2>
-    <h3>Removable Discontinuity</h3>
-    <ul>
-      <li><a href="continuity/removable/01.html">Example 1</a></li>
-      <li><a href="continuity/removable/02.html">Example 2</a></li>
-    </ul>
-    <h3>Jump Discontinuity</h3>
-    <ul>
-      <li><a href="continuity/jump/01.html">Example 1</a></li>
-      <li><a href="continuity/jump/02.html">Example 2</a></li>
-    </ul>
-    <h3>Infinite Discontinuity</h3>
-    <ul>
-      <li><a href="continuity/infinite/01.html">Example 1</a></li>
-      <li><a href="continuity/infinite/02.html">Example 2</a></li>
-    </ul>
-    
-    <h2>Quiz</h2>
+      <h2>Continuity/Discontinuity</h2>
+      <h3>Removable Discontinuity</h3>
+      <ul>
+        <li><a href="continuity/removable/01.html">Example 1</a></li>
+        <li><a href="continuity/removable/02.html">Example 2</a></li>
+      </ul>
+      <h3>Jump Discontinuity</h3>
+      <ul>
+        <li><a href="continuity/jump/01.html">Example 1</a></li>
+        <li><a href="continuity/jump/02.html">Example 2</a></li>
+      </ul>
+      <h3>Infinite Discontinuity</h3>
+      <ul>
+        <li><a href="continuity/infinite/01.html">Example 1</a></li>
+        <li><a href="continuity/infinite/02.html">Example 2</a></li>
+      </ul>
+      
+      <h2>Quiz</h2>
+    </main>
 	</body>
 </html>
