--- a/training/06-y-equal-sinx.html
+++ b/training/06-y-equal-sinx.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
     <script src="../p5.js"></script>
     <script src="../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8">
-
   </head>
   <body>
-    <script src="06.js"></script>
-    <p>Math graph sonification y=sin(x)</p>
-  
-
-</body></html>
+  	<main id="wrapper">
+	    <script src="06.js"></script>
+	    <p>Math graph sonification y=sin(x)</p>
+	  </main>
+	</body>
+</html>
