add quiz 1 and 2

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       </ul>
       
       <h2>Quiz</h2>
+      <ul>
+        <li><a href="quiz/01.html">Quiz 1</a></li>
+        <li><a href="quiz/02.html">Quiz 2</a></li>
+      </ul>
     </main>
 	</body>
 </html>
