add quiz 3 and 4

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       <ul>
         <li><a href="quiz/01.html">Quiz 1</a></li>
         <li><a href="quiz/02.html">Quiz 2</a></li>
+        <li><a href="quiz/03.html">Quiz 3</a></li>
+        <li><a href="quiz/04.html">Quiz 4</a></li>
       </ul>
     </main>
 	</body>
