--- a/quiz/04.html
+++ b/quiz/04.html
@@ -8,9 +8,9 @@
   </head>
   <body>
   	<main id="wrapper">
-	    <script src="03.js"></script>
-	    <p>Quiz 3</p>
-	    <p>State the x-values at which the function below has a jump discontinuity.</p>
+	    <script src="04.js"></script>
+	    <p>Quiz 4</p>
+	    <p>State the x-values at which the following function has a removable discontinuity.</p>
   	</main>
 	</body>
 </html>
