--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li><a href="quiz/02.html">Quiz 2</a></li>
         <li><a href="quiz/03.html">Quiz 3</a></li>
         <li><a href="quiz/04.html">Quiz 4</a></li>
+        <li><a href="quiz/05.html">Quiz 5</a></li>
       </ul>
     </main>
 	</body>
