add back to top

--- a/continuity/infinite/02.html
+++ b/continuity/infinite/02.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../../index.html">Back to top</a></p>
 	    <script src="02.js"></script>
 	    <p>Infinite Discontinuity Example 2</p>
 	    <p>y=1/x</p>
