--- a/continuity/jump/02.html
+++ b/continuity/jump/02.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../../index.html">Back to top</a></p>
 	    <script src="02.js"></script>
 	    <p>Jump Discontinuity Example 2</p>
 	    <p>y=x^2 when x<1 and y=-x+4 when x>=1.</p>
