--- a/continuity/removable/01.html
+++ b/continuity/removable/01.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../../index.html">Back to top</a></p>
 	    <script src="01.js"></script>
 	    <p>Removable Discontinuity 1</p>
 	    <p>y is undefined when x = 1</p>
