--- a/example/rem.html
+++ b/example/rem.html
@@ -3,14 +3,14 @@
 	<head>
     <script src="../p5.js"></script>
     <script src="../p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../../style.css">
     <meta charset="utf-8">
   </head>
   <body>
   	<main id="wrapper">
-      <p><a href="../index.html">Back to top</a></p>
-	    <script src="02.js"></script>
-	    <p>Math graph sonification y=-x</p>
+	    <script src="rem.js"></script>
+	    <p>Removable Discontinuity 1</p>
+	    <p>y is undefined when x = 1</p>
 	  </main>
 	</body>
 </html>
