--- a/quiz/01.html
+++ b/quiz/01.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../index.html">Back to top</a></p>
 	    <script src="01.js"></script>
 	    <p>Quiz 1</p>
 	    <p>Detemine the type of discontinuity the function below has at x = 2.</p>
