--- a/quiz/02.html
+++ b/quiz/02.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../index.html">Back to top</a></p>
 	    <script src="02.js"></script>
 	    <p>Quiz 2</p>
 	    <p>Detemine the type of discontinuity the function below has at x = -1 and x = 2.</p>
