--- a/quiz/03.html
+++ b/quiz/03.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../index.html">Back to top</a></p>
 	    <script src="03.js"></script>
 	    <p>Quiz 3</p>
 	    <p>State the x-values at which the function below has a jump discontinuity.</p>
