--- a/quiz/04.html
+++ b/quiz/04.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../index.html">Back to top</a></p>
 	    <script src="04.js"></script>
 	    <p>Quiz 4</p>
 	    <p>State the x-values at which the following function has a removable discontinuity.</p>
