--- a/quiz/05.html
+++ b/quiz/05.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../index.html">Back to top</a></p>
 	    <script src="05.js"></script>
 	    <p>Quiz 5</p>
 	    <p>Using the graph shown below, identify and classify each point of discontinuity.</p>
