--- a/training/01-y-equal-x.html
+++ b/training/01-y-equal-x.html
@@ -8,8 +8,9 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../index.html">Back to top</a></p>
 	    <script src="01.js"></script>
 	    <p>Math graph sonification y=x</p>
-	   </main>  
+	  </main>  
 	</body>
 </html>
