--- a/training/03-y-equal-2.html
+++ b/training/03-y-equal-2.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../index.html">Back to top</a></p>
 	    <script src="03.js"></script>
 	    <p>Math graph sonification y=2</p>
 	  </main>
