--- a/continuity/jump/01.html
+++ b/continuity/jump/01.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../../index.html">Back to top</a></p>
 	    <script src="01.js"></script>
 	    <p>Jump Discontinuity Example 1</p>
 	    <p>y=x when x<0 and y=x+2 when x>=0.</p>
