--- a/continuity/removable/02.html
+++ b/continuity/removable/02.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../../index.html">Back to top</a></p>
 	    <script src="02.js"></script>
 	    <p>Removable Discontinuity 2</p>
 	    <p>y=x when x!=1 and y=2 when x=1.</p>
