--- a/training/05-y-equal-minus-x-squared.html
+++ b/training/05-y-equal-minus-x-squared.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<main id="wrapper">
+      <p><a href="../index.html">Back to top</a></p>
 	    <script src="05.js"></script>
 	    <p>Math graph sonification y=-x^2</p>
 	  </main>
