--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+    <title>Sonification of Math Graphs for People with Visual Impairments</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
   <body>
     <main id="wrapper">
-    	<h1>Math Graph Sonification Test</h1>
+    	<h1>Sonification of Math Graphs for People with Visual Impairments</h1>
+      <h2>About</h2>
+      <p>This project is to use sonification (i.e. sound) to convey math graphs for people with visual impairments. Math graphs are commonly used in education. But, since they are based on visuals, it is not easy for people who are blind to know the content of the graphs. In this project, I want to explore how sonification can be useful to communicate mathematical graphs in real time using only a web browser.</p>
 
-      <h2>Training</h2>
+      <p>More secifically, I focused on the mathematical concepts of continuity and discontinuity taught in calculus. In general, math graphs are frequently used to introduce the concepts of continuity and discontinuity. But, what if you can't rely on visuals? In this project, I designed sonificaiton to introduce the concepts of continuity and discontinuity.</p>
+
+      <h2>Content</h2>
+      <p>The content consists of three parts: 1) Introduction to sonification, 2) Continuity and discontinuity, and 3) Quiz.</p>
+
+      <h2>Introduction to sonification</h2>
+      <p>To give you an idea of what sonification is like, I present 6 examples of math graphs.</p>
       <ul>
       	<li><a href="training/01-y-equal-x.html">y = x</a></li>
       	<li><a href="training/02-y-equal-minus-x.html">y = -x</a></li>
@@ -18,24 +27,27 @@
         <li><a href="training/06-y-equal-sinx.html">y = sin(x)</a></li>
       </ul>
 
-      <h2>Continuity/Discontinuity</h2>
+      <h2>Continuity and discontinuity</h2>
+      <p>Avoiding rigorous mathematical definitions, we can simply say that a graph is continuous when you can draw it in a single stroke without holes or skips, otherwise a graph is discontinuous. To describe that in sound, a continuous graph sounds uninterrupted from the beginning to end (i.e. no silence) and with no jump in pitch.</p>
+      <p>With sonification, I present three common types of discontinuity: removable discontinuity, jump discontinuity, and infinite discontinuity.</p>
       <h3>Removable Discontinuity</h3>
       <ul>
-        <li><a href="continuity/removable/01.html">Example 1</a></li>
-        <li><a href="continuity/removable/02.html">Example 2</a></li>
+        <li><a href="continuity/removable/01.html">Removable Discontinuity Example 1</a></li>
+        <li><a href="continuity/removable/02.html">Removable Discontinuity Example 2</a></li>
       </ul>
       <h3>Jump Discontinuity</h3>
       <ul>
-        <li><a href="continuity/jump/01.html">Example 1</a></li>
-        <li><a href="continuity/jump/02.html">Example 2</a></li>
+        <li><a href="continuity/jump/01.html">Jump Discontinuity Example 1</a></li>
+        <li><a href="continuity/jump/02.html">Jump Discontinuity Example 2</a></li>
       </ul>
       <h3>Infinite Discontinuity</h3>
       <ul>
-        <li><a href="continuity/infinite/01.html">Example 1</a></li>
-        <li><a href="continuity/infinite/02.html">Example 2</a></li>
+        <li><a href="continuity/infinite/01.html">Infinite Discontinuity Example 1</a></li>
+        <li><a href="continuity/infinite/02.html">Infinite Discontinuity Example 2</a></li>
       </ul>
       
       <h2>Quiz</h2>
+      <p>I present 5 quizzes to ask the concept of discontinuity. I hope you enjoy!</p>
       <ul>
         <li><a href="quiz/01.html">Quiz 1</a></li>
         <li><a href="quiz/02.html">Quiz 2</a></li>
