--- a/training/01-y-equal-x.html
+++ b/training/01-y-equal-x.html
@@ -5,12 +5,15 @@
     <script src="../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8">
+    <title>Sonification of a graph y = x</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../index.html">Back to top</a></p>
 	    <script src="01.js"></script>
-	    <p>Math graph sonification y=x</p>
+	    <h1>Sonification of a graph y = x</h1>
+      <h2>Description of the graph</h2>
+      <p>The graph is y equals x. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The shape of the graph is a straigt line with a slope of one. The graph begins at the point of x equals minus five and y equals minus five. As it moves to the right, the graph crosses the origin and continue to increase until it reaches the point of x equals plus five and y equals plus five.</p>
 	  </main>  
 	</body>
 </html>
