--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <ul>
       	<li><a href="training/01-y-equal-x.html">y = x</a></li>
       	<li><a href="training/02-y-equal-minus-x.html">y = -x</a></li>
-      	<li><a href="training/03-y-equal-2.html">y = constant</a></li>
+      	<li><a href="training/03-y-equal-2.html">y = 2</a></li>
       	<li><a href="training/04-y-equal-x-squared.html">y = x^2</a></li>
       	<li><a href="training/05-y-equal-minus-x-squared.html">y = -x^2</a></li>
         <li><a href="training/06-y-equal-sinx.html">y = sin(x)</a></li>
