--- a/training/01-y-equal-x.html
+++ b/training/01-y-equal-x.html
@@ -13,7 +13,7 @@
 	    <script src="01.js"></script>
 	    <h1>Sonification of a graph y = x</h1>
       <h2>Description of the graph</h2>
-      <p>The graph is y equals x. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The shape of the graph is a straigt line with a slope of one. The graph begins at the point of x equals minus five and y equals minus five. As it moves to the right, the graph continues to increase, through the origin, until it reaches the point of x equals plus five and y equals plus five.</p>
+      <p>The graph is y equals x. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The shape of the graph is a straight line with a slope of one. The graph begins at the point of x equals minus five and y equals minus five. As it moves to the right, the graph continues to increase, through the origin, until it reaches the point of x equals plus five and y equals plus five.</p>
       <h2>Sonification</h2>
       <p>Click play button to start sonification.</p>
 	  </main>  
