--- a/training/04-y-equal-x-squared.html
+++ b/training/04-y-equal-x-squared.html
@@ -5,12 +5,17 @@
     <script src="../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8">
+    <title>Sonification of a graph y equals x squared (y = x^2)</title>
   </head>
   <body>
     <main id="wrapper">
       <p><a href="../index.html">Back to top</a></p>
 	    <script src="04.js"></script>
-	    <p>Math graph sonification y=x^2</p>
+      <h1>Sonification of a graph y equals x squared (y = x^2)</h1>
+      <h2>Description of the graph</h2>
+      <p>The graph is y equals x squared. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The shape of the graph is a parabola, concave up (i.e. similar to U shape). The graph begins at the point of x equals minus five and y equals plus 25. As it moves to the right, the graph decreases steeply till it reaches the minumus at the origin. Then the graph changes direction to go up steeply until it reaches the point of x equals plus five and y equals plus 25.</p>
+      <h2>Sonification</h2>
+      <p>Click play button to start sonification.</p>
 		</main>
 	</body>
 </html>
