--- a/training/06-y-equal-sinx.html
+++ b/training/06-y-equal-sinx.html
@@ -5,12 +5,20 @@
     <script src="../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8">
+    <title>Sonification of a graph y equals sine x (y = sin(x))</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../index.html">Back to top</a></p>
 	    <script src="06.js"></script>
-	    <p>Math graph sonification y=sin(x)</p>
+      <h1>Sonification of a graph y equals sine x (y = sin(x))</h1>
+      <h2>Description of the graph</h2>
+      <p>The graph is y equals sine x. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The shape of the graph is like a wave that oscillates between plus one and minus one on the y-axis in every two pi on the x-axis.</p>
+      <p>The graph begins at the point of x equals minus five and y equals about 0.95. As it moves to the right, the graph initially increases until it reaches the point of minus three pi over two, one. Then the graph changes direction to go down. It intersects the x-axis at the point minus pi, zero, and continues down until it reaches the point of minus pi over two, minus one.</p>
+      <p>Then the graph changes direction to go up. It crosses the origin, and continues up until it reaches the point of pi over two, one.</p>
+      <p>After that, it repeats the same motion (going up and down like a wave) every two pi units.</p>
+      <h2>Sonification</h2>
+      <p>Click play button to start sonification.</p>
 	  </main>
 	</body>
 </html>
