--- a/training/06-y-equal-sinx.html
+++ b/training/06-y-equal-sinx.html
@@ -17,8 +17,8 @@
       <p>The graph begins at the point of x equals minus five and y equals about 0.95. As it moves to the right, the graph initially increases until it reaches the point of minus three pi over two, one. Then the graph changes direction to go down. It intersects the x-axis at the point minus pi, zero, and continues down until it reaches the point of minus pi over two, minus one.</p>
       <p>Then the graph changes direction to go up. It crosses the origin, and continues up until it reaches the point of pi over two, one.</p>
       <p>After that, it repeats the same motion (going up and down like a wave) every two pi units.</p>
-      <h2>Sonification</h2>
-      <p>Click play button to start sonification.</p>
+      <h2>Description of sonification</h2>
+      <p>You will hear the pitch goes up and down repeatedly.</p>
 	  </main>
 	</body>
 </html>
