--- a/continuity/removable/01.html
+++ b/continuity/removable/01.html
@@ -5,13 +5,17 @@
     <script src="../../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <meta charset="utf-8">
+    <title>Removable discontinuity example 1</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../../index.html">Back to top</a></p>
 	    <script src="01.js"></script>
-	    <p>Removable Discontinuity 1</p>
-	    <p>y is undefined when x = 1</p>
+      <h1>Removable discontinuity example 1</h1>
+      <h2>Description of the graph</h2>
+      <p>The graph consists of two segments: y equals x when x is not equal to one, and y is undefined when x equals one. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The shape of the graph is a straight line with a slope of one. The graph begins at the point of x equals minus five and y equals minus five. As it moves to the right, the graph continues to increase, through the origin, till x equals less than one. Then, when x equals one, the y-value is undefined. Then, when x is greater than one, the graphs continues to increase again until it reaches the point of x equals plus five and y equals plus five.</p>
+      <h2>Description of sonification</h2>
+      <p>When x equals one, you will not hear any sound to express the y-value because it is undefined.</p>
 	  </main>
 	</body>
 </html>
