--- a/training/03-y-equal-2.html
+++ b/training/03-y-equal-2.html
@@ -14,8 +14,8 @@
       <h1>Sonification of a graph y equals two (y = 2)</h1>
       <h2>Description of the graph</h2>
       <p>The graph is y equals two. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The shape of the graph is a straight horizontal line. The graph begins at the point of x equals minus five and y equals plus two. As it moves to the right, the graph continues to be constantly two until it reaches the point of x equals plus five and y equals plus two.</p>
-      <h2>Sonification</h2>
-      <p>Click play button to start sonification.</p>
+      <h2>Description of sonification</h2>
+      <p>You will hear the constant pitch from beginning to end.</p>
 	  </main>
 	</body>
 </html>
