add description of discontinuity to removable discontinuity example 1

--- a/continuity/removable/01.html
+++ b/continuity/removable/01.html
@@ -14,6 +14,8 @@
       <h1>Removable discontinuity example 1</h1>
       <h2>Description of the graph</h2>
       <p>The graph consists of two segments: y equals x when x is not equal to one, and y is undefined when x equals one. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The shape of the graph is a straight line with a slope of one. The graph begins at the point of x equals minus five and y equals minus five. As it moves to the right, the graph continues to increase, through the origin, till x equals less than one. Then, when x equals one, the y-value is undefined. Then, when x is greater than one, the graphs continues to increase again until it reaches the point of x equals plus five and y equals plus five.</p>
+      <h2>Description of discontinuity</h2>
+      <p>This graph is a case that y is undefined when x equals one. If a graph containts an undefined value at a point (i.e. the graph is not continuous), it is called a removable discontinuity.</p>
       <h2>Description of sonification</h2>
       <p>When x equals one, you will not hear any sound to express the y-value because it is undefined.</p>
 	  </main>
