--- a/continuity/jump/01.html
+++ b/continuity/jump/01.html
@@ -5,13 +5,23 @@
     <script src="../../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <meta charset="utf-8">
+    <title>Jump discontinuity example 1</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../../index.html">Back to top</a></p>
 	    <script src="01.js"></script>
-	    <p>Jump Discontinuity Example 1</p>
-	    <p>y=x when x<0 and y=x+2 when x>=0.</p>
+      <h1>Jump discontinuity example 1</h1>
+      <h2>Description of the graph</h2>
+      <p>The graph consists of two segments: y equals x when x is less than zero, and y equals x plus two when x is greater than or equal to one. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The graph consists of two disjoint straight lines with a slope of one.</p>
+      <p>The first segment begins at the point of x equals minus five and y equals minus five. As it moves to the right, the graph continues to increase with a slope of one till x equals less than zero.</p>
+      <p>Then, the second segment begins at the point of x equals zero and y equals two. As it moves to the right, the graph continues to increase with a slope of one until it reaches the point of x equals five and y equals seven.</p>
+
+      <h2>Description of discontinuity</h2>
+      <p>This graph is a case that there is a jump in the y-value when x equals one and the graph is divided into two segments. If a graph containts a jump and separates the graphs into multiple segments, it is called a jump discontinuity.</p>
+
+      <h2>Description of sonification</h2>
+      <p>When x equals zero, you will hear the pitch goes high. Then it keeps going up as x increases.</p>
   	</main>
 	</body>
 </html>
