--- a/continuity/jump/02.html
+++ b/continuity/jump/02.html
@@ -5,13 +5,24 @@
     <script src="../../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <meta charset="utf-8">
+    <title>Jump discontinuity example 2</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../../index.html">Back to top</a></p>
 	    <script src="02.js"></script>
-	    <p>Jump Discontinuity Example 2</p>
-	    <p>y=x^2 when x<1 and y=-x+4 when x>=1.</p>
+      <h1>Jump discontinuity example 2</h1>
+      
+      <h2>Description of the graph</h2>
+      <p>The graph consists of two segments: y equals x squared when x is less than one, and y equals minus x plus four when x is greater than or equal to one. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five.</p>
+      <p>The shape of the first segment is a parabola, concave up (i.e. similar to U-shape). It begins at the point of x equals minus five and y equals 25. As it moves to the right, the graph decreases steeply till it reaches the minimum at the origin. Then the graph changes direction to go up until x is less than one.</p>
+      <p>Then, the second segment begins at the point of x equals one and y equals three. The shape of the second segment is a straight line with a slope of minus one. As it moves to the right, the graph continues to decrease until it reaches the point of x equals five and y equals minus one.</p>
+
+      <h2>Description of discontinuity</h2>
+      <p>This graph is a case that there is a jump in the y-value when x equals one and the graph is divided into two segments. If a graph containts a jump and separates the graphs into multiple segments, it is called a jump discontinuity.</p>
+
+      <h2>Description of sonification</h2>
+      <p>When x equals one, you will hear the pitch goes high. Then it keeps going down as x increases.</p>
   	</main>
 	</body>
 </html>
