update infinite discontinuity ex 1

--- a/continuity/infinite/01.html
+++ b/continuity/infinite/01.html
@@ -5,13 +5,28 @@
     <script src="../../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <meta charset="utf-8">
+    <title>Infinite discontinuity example 1</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../../index.html">Back to top</a></p>
 	    <script src="01.js"></script>
-	    <p>Infinite Discontinuity Example 1</p>
-	    <p>y=1/(x^2)</p>
+      <h1>Infinite discontinuity example 1</h1>
+      
+      <h2>Description of the graph</h2>
+      <p>The graph is y equals one over x squared. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The graph consists of two separate branches that is symmetric about the vertical line x equals zero, the y-axis.</p>
+
+      <p>The first branch begins at x equals five and y is close to the x-axis. As it moves to the right, the graph increases very slowly until it reaches the point x equals minus one and y equals one. Then the graph increases steeply and the y-value becomes infinitely large as it continues to approach zero.</p>
+
+      <p>The y-value is undefined when x equals zero.</p>
+
+      <p>The second branch begins when x is positive and very close to zero and y-value is very large. As it moves to the right, the graph decreases steeply until it reaches the point x equals one and y equals one. Then the graph decreases very slowly until x equals five and the y becomes close to zero.</p>
+
+      <h2>Description of discontinuity</h2>
+      <p>This graph is a case that y becomes infinitely large when x is close to zero, but the y-value is undefined when x equals zero. This type of discontinuity is called an inifinite discontinuity.</p>
+
+      <h2>Description of sonification</h2>
+      <p>At first you will hear almost constant pitch. Then, when x becomes close to zero from the negative side, you will hear the pitch goes very high. Then, you will not hear any sound when x equals zero. Then, when x increases from zero, you will hear the pitch goes down and the pitch remains almost constant as x approaches five.</p>
   	</main>
 	</body>
 </html>
