--- a/continuity/infinite/02.html
+++ b/continuity/infinite/02.html
@@ -5,13 +5,28 @@
     <script src="../../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <meta charset="utf-8">
+    <title>Infinite discontinuity example 2</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../../index.html">Back to top</a></p>
 	    <script src="02.js"></script>
-	    <p>Infinite Discontinuity Example 2</p>
-	    <p>y=1/x</p>
+      <h1>Infinite discontinuity example 2</h1>
+      
+      <h2>Description of the graph</h2>
+      <p>The graph is y equals one over x. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The graph consists of two separate branches that is antisymmetric about the vertical line x equals zero, the y-axis.</p>
+
+      <p>The first branch begins at x equals five and y is negative and close to the x-axis. As it moves to the right, the graph decreases very slowly until it reaches the point x equals minus one and y equals minus one. Then the graph decreases steeply and the y-value becomes infinitely small as x continues to approach zero.</p>
+
+      <p>The y-value is undefined when x equals zero.</p>
+
+      <p>The second branch begins when x is positive and very close to zero and y-value is very large. As it moves to the right, the graph decreases steeply until it reaches the point x equals one and y equals one. Then the graph decreases very slowly until x equals five and the y becomes close to zero.</p>
+
+      <h2>Description of discontinuity</h2>
+      <p>This graph is a case that the y-value becomes infinitely small when x is close to zero from the negative side, the y-value is undefined when x equals zero, and the y-value is infinitely large when x is close to zero from the positive side. This type of discontinuity is called an inifinite discontinuity.</p>
+
+      <h2>Description of sonification</h2>
+      <p>At first you will hear almost constant pitch. Then, when x becomes close to zero from the negative side, you will hear the pitch goes very low. Then, you will not hear any sound when x equals zero. Then, when x increases from zero, you will hear the pitch goes down from very high and remains almost constant as x approaches five.</p>
   	</main>
 	</body>
 </html>
