--- a/quiz/01.html
+++ b/quiz/01.html
@@ -5,13 +5,33 @@
     <script src="../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8">
+    <title>Quiz 1</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../index.html">Back to top</a></p>
-	    <script src="01.js"></script>
-	    <p>Quiz 1</p>
-	    <p>Detemine the type of discontinuity the function below has at x = 2.</p>
+
+	    <h1>Quiz 1</h1>
+      
+      <h2>Question</h2>
+	    <p>The following graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. Detemine the type of discontinuity the graph has at x equals two.</p>
+
+      <section id="sonification">
+      <h2>Sonification</h2>
+      <p>Click a play button to start sonification.</p>
+      <script src="01.js"></script>
+      </section>
+      
+      <h2>Answer</h2>
+      <p>The graph has a jump discontinuity at x equals two.</p>
+
+      <h2>Explanation</h2>
+      <p>The graph consists of two segments.</p>
+      <p>The shape of the first segment is a parabola, concave down (i.e. similar to upside-down U-shape). It begins at the point of x equals minus five and y is about minus three. As it moves to the right, the graph increases slowly till it reaches the maximum at x equals zero and y equals two. Then the graph changes direction to go down until x equals two and y is about one.</p>
+      <p>At x equals two, there is a jump discontinuity and y jumps from about one to minus two.</p>
+      <p>The second segment begins at x is greater than but not equal to two and y is greate than but not equal to minus two. Its shape is a straight line with a slope of one. As it moves to the right, the graphs increases until it reaches the point of x equals five and y equals one.</p>
+
+      <p><a href="../index.html">Back to top</a></p>
   	</main>
 	</body>
 </html>
