--- a/continuity/infinite/02.html
+++ b/continuity/infinite/02.html
@@ -10,7 +10,7 @@
   <body>
   	<main id="wrapper">
       <p><a href="../../index.html">Back to top</a></p>
-	    <script src="02.js"></script>
+
       <h1>Infinite discontinuity example 2</h1>
       
       <h2>Description of the graph</h2>
@@ -22,11 +22,19 @@
 
       <p>The second branch begins when x is positive and very close to zero and y-value is very large. As it moves to the right, the graph decreases steeply until it reaches the point x equals one and y equals one. Then the graph decreases very slowly until x equals five and the y becomes close to zero.</p>
 
+      <section id="sonification">
+      <h2>Sonification</h2>
+      <p>Click a play button to start sonification.</p>
+      <script src="02.js"></script>
+      </section>
+
       <h2>Description of discontinuity</h2>
       <p>This graph is a case that the y-value becomes infinitely small when x is close to zero from the negative side, the y-value is undefined when x equals zero, and the y-value is infinitely large when x is close to zero from the positive side. This type of discontinuity is called an inifinite discontinuity.</p>
 
       <h2>Description of sonification</h2>
       <p>At first you will hear almost constant pitch. Then, when x becomes close to zero from the negative side, you will hear the pitch goes very low. Then, you will not hear any sound when x equals zero. Then, when x increases from zero, you will hear the pitch goes down from very high and remains almost constant as x approaches five.</p>
+
+      <p><a href="../../index.html">Back to top</a></p>
   	</main>
 	</body>
 </html>
