--- a/continuity/jump/01.html
+++ b/continuity/jump/01.html
@@ -10,7 +10,7 @@
   <body>
   	<main id="wrapper">
       <p><a href="../../index.html">Back to top</a></p>
-	    <script src="01.js"></script>
+
       <h1>Jump discontinuity example 1</h1>
       
       <h2>Description of the graph</h2>
@@ -18,11 +18,19 @@
       <p>The first segment begins at the point of x equals minus five and y equals minus five. As it moves to the right, the graph continues to increase with a slope of one till x equals less than zero.</p>
       <p>Then, the second segment begins at the point of x equals zero and y equals two. As it moves to the right, the graph continues to increase with a slope of one until it reaches the point of x equals five and y equals seven.</p>
 
+      <section id="sonification">
+      <h2>Sonification</h2>
+      <p>Click a play button to start sonification.</p>
+      <script src="01.js"></script>
+      </section>
+
       <h2>Description of discontinuity</h2>
       <p>This graph is a case that there is a jump in the y-value when x equals one and the graph is divided into two segments. If a graph containts a jump and separates the graphs into multiple segments, it is called a jump discontinuity.</p>
 
       <h2>Description of sonification</h2>
       <p>When x equals zero, you will hear the pitch goes high. Then it keeps going up as x increases.</p>
+
+      <p><a href="../../index.html">Back to top</a></p>
   	</main>
 	</body>
 </html>
