--- a/continuity/jump/02.html
+++ b/continuity/jump/02.html
@@ -10,7 +10,7 @@
   <body>
   	<main id="wrapper">
       <p><a href="../../index.html">Back to top</a></p>
-	    <script src="02.js"></script>
+
       <h1>Jump discontinuity example 2</h1>
       
       <h2>Description of the graph</h2>
@@ -18,11 +18,19 @@
       <p>The shape of the first segment is a parabola, concave up (i.e. similar to U-shape). It begins at the point of x equals minus five and y equals 25. As it moves to the right, the graph decreases steeply till it reaches the minimum at the origin. Then the graph changes direction to go up until x is less than one.</p>
       <p>Then, the second segment begins at the point of x equals one and y equals three. The shape of the second segment is a straight line with a slope of minus one. As it moves to the right, the graph continues to decrease until it reaches the point of x equals five and y equals minus one.</p>
 
+      <section id="sonification">
+      <h2>Sonification</h2>
+      <p>Click a play button to start sonification.</p>
+      <script src="02.js"></script>
+      </section>
+
       <h2>Description of discontinuity</h2>
       <p>This graph is a case that there is a jump in the y-value when x equals one and the graph is divided into two segments. If a graph containts a jump and separates the graphs into multiple segments, it is called a jump discontinuity.</p>
 
       <h2>Description of sonification</h2>
       <p>When x equals one, you will hear the pitch goes high. Then it keeps going down as x increases.</p>
+
+      <p><a href="../../index.html">Back to top</a></p>
   	</main>
 	</body>
 </html>
