--- a/training/04-y-equal-x-squared.html
+++ b/training/04-y-equal-x-squared.html
@@ -10,12 +10,22 @@
   <body>
     <main id="wrapper">
       <p><a href="../index.html">Back to top</a></p>
-	    <script src="04.js"></script>
+
       <h1>Sonification of a graph y equals x squared (y = x^2)</h1>
+
       <h2>Description of the graph</h2>
       <p>The graph is y equals x squared. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The shape of the graph is a parabola, concave up (i.e. similar to U-shape). The graph begins at the point of x equals minus five and y equals plus 25. As it moves to the right, the graph decreases steeply till it reaches the minimum at the origin. Then the graph changes direction to go up steeply until it reaches the point of x equals plus five and y equals plus 25.</p>
+
+      <section id="sonification">
+      <h2>Sonification</h2>
+      <p>Click a play button to start sonification.</p>
+      <script src="04.js"></script>
+      </section>
+
       <h2>Description of sonification</h2>
       <p>You will hear the pitch goes down rapidly at first, then slows down as x approaches zero. Then the pitch goes up from slowly to rapidly as x increases from zero.</p>
+
+      <p><a href="../index.html">Back to top</a></p>
 		</main>
 	</body>
 </html>
