--- a/training/05-y-equal-minus-x-squared.html
+++ b/training/05-y-equal-minus-x-squared.html
@@ -10,12 +10,21 @@
   <body>
   	<main id="wrapper">
       <p><a href="../index.html">Back to top</a></p>
-	    <script src="05.js"></script>
+
       <h1>Sonification of a graph y equals minus x squared (y = -x^2)</h1>
       <h2>Description of the graph</h2>
       <p>The graph is y equals minus x squared. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The shape of the graph is a parabola, concave down (i.e. similar to upside-down U-shape). The graph begins at the point of x equals minus five and y equals minus 25. As it moves to the right, the graph increases steeply till it reaches the maximum at the origin. Then the graph changes direction to go down steeply until it reaches the point of x equals plus five and y equals minus 25.</p>
+
+      <section id="sonification">
+      <h2>Sonification</h2>
+      <p>Click a play button to start sonification.</p>
+      <script src="05.js"></script>
+      </section>
+
       <h2>Description of sonification</h2>
       <p>You will hear the pitch goes up rapidly at first, then slows down as x approaches zero. Then the pitch goes down from slowly to rapidly as x increases from zero.</p>
+
+      <p><a href="../index.html">Back to top</a></p>
 	  </main>
 	</body>
 </html>
