--- a/quiz/02.html
+++ b/quiz/02.html
@@ -5,13 +5,35 @@
     <script src="../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8">
+    <title>Quiz 2</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../index.html">Back to top</a></p>
-	    <script src="02.js"></script>
-	    <p>Quiz 2</p>
-	    <p>Detemine the type of discontinuity the function below has at x = -1 and x = 2.</p>
+
+	    <h1>Quiz 2</h1>
+
+      <h2>Question</h2>
+	    <p>The following graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. Detemine the type of discontinuity the graph has at x equals minus one and x qeuals two.</p>
+
+      <section id="sonification">
+      <h2>Sonification</h2>
+      <p>Click a play button to start sonification.</p>
+      <script src="02.js"></script>
+      </section>
+
+      <h2>Answer</h2>
+      <p>The graph has an infinite discontinuity at x equals minus one, and a jump discontinuity at x equals two.</p>
+
+      <h2>Explanation</h2>
+      <p>The graph consists of three segments.</p>
+      <p>The first segment begins at x equals minus five and y is negative and close to zero. As it moves to the right, the graph decreases slowly. Then it decreases steeply and the y-value becomes infinitely small as x continuies to approach minus one.</p>
+      <p>There is an infinite discontinuity at x equals minus one.</p>
+      <p>The second branch begins when x is close to minus one from the right side and y-value is very large. As it moves to the right, the graph decreases steeply. Then it decreases slowly and the y-value becomes close to zero. It ends when x is less than two.</p>
+      <p>At x equals two, there is a jump discontinuity and y jumps from about zero to two.</p>
+      <p>The third segment begins at x equals two and y equals two. Its shape is a straight line with a slope of one. As it moves to the right, the graphs increases until it reaches the point of x equals five and y equals five.</p>
+
+      <p><a href="../index.html">Back to top</a></p>
   	</main>
 	</body>
 </html>
