--- a/quiz/02.html
+++ b/quiz/02.html
@@ -29,7 +29,7 @@
       <p>The graph consists of three segments.</p>
       <p>The first segment begins at x equals minus five and y is negative and close to zero. As it moves to the right, the graph decreases slowly. Then it decreases steeply and the y-value becomes infinitely small as x continuies to approach minus one.</p>
       <p>There is an infinite discontinuity at x equals minus one.</p>
-      <p>The second branch begins when x is close to minus one from the right side and y-value is very large. As it moves to the right, the graph decreases steeply. Then it decreases slowly and the y-value becomes close to zero. It ends when x is less than two.</p>
+      <p>The second segment begins when x is close to minus one from the right side and y-value is very large. As it moves to the right, the graph decreases steeply. Then it decreases slowly and the y-value becomes close to zero. It ends when x is less than two.</p>
       <p>At x equals two, there is a jump discontinuity and y jumps from about zero to two.</p>
       <p>The third segment begins at x equals two and y equals two. Its shape is a straight line with a slope of one. As it moves to the right, the graphs increases until it reaches the point of x equals five and y equals five.</p>
 
