--- a/quiz/03.html
+++ b/quiz/03.html
@@ -5,13 +5,35 @@
     <script src="../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8">
+    <title>Quiz 3</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../index.html">Back to top</a></p>
-	    <script src="03.js"></script>
-	    <p>Quiz 3</p>
-	    <p>State the x-values at which the function below has a jump discontinuity.</p>
+
+	    <h1>Quiz 3</h1>
+
+      <h2>Question</h2>
+	    <p>The following graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. State the x-values at which the graph has a jump discontinuity.</p>
+
+      <section id="sonification">
+      <h2>Sonification</h2>
+      <p>Click a play button to start sonification.</p>
+      <script src="03.js"></script>
+      </section>
+
+      <h2>Answer</h2>
+      <p>The graph has two jump discontinuities at x equals minus one and x equals two.</p>
+
+      <h2>Explanation</h2>
+      <p>The graph consists of three segments.</p>
+      <p>The first segment begins at x equals minus five and y is about minus one. Its shape is a parabola, concave down (i.e. similar to upside-down U-shape). As it moves to the right, the graph increases till it reaches the point of x equals minus three and y equals three. Then it decreases till x is close to and less than minus one and y is close to and less than minus one.</p>
+      <p>There is a jump discontinuity at x equals minus one. The y-value jumps from about minus one to about three.</p>
+      <p>The second segment begins at x equals minus one and y is about three. Its shape is a parabola, concave down. As it moves to the right, the graph increases at first till it reaches the point of x equals zero and y equals three. Then it decreases till x is close to and less than two one and y is about two.</p>
+      <p>There is a jump discontinuity at x equals two. The y-value jumps from about minus two to minus one.</p>
+      <p>The third segment begins at x equals two and y equals minus one. Its shape is a parabola, concave up. As it moves to the right, the graph decreases at first it reaches the point of x equals minus three and y equals minus three. Then it increases till x equals five and y equals five.</p>
+
+      <p><a href="../index.html">Back to top</a></p>
   	</main>
 	</body>
 </html>
