--- a/quiz/04.html
+++ b/quiz/04.html
@@ -5,13 +5,35 @@
     <script src="../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8">
+    <title>Quiz 4</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../index.html">Back to top</a></p>
-	    <script src="04.js"></script>
-	    <p>Quiz 4</p>
-	    <p>State the x-values at which the following function has a removable discontinuity.</p>
+
+	    <h1>Quiz 4</h1>
+
+      <h2>Question</h2>
+	    <p>The following graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. State the x-values at which the graph has a removable discontinuity.</p>
+
+      <section id="sonification">
+      <h2>Sonification</h2>
+      <p>Click a play button to start sonification.</p>
+      <script src="04.js"></script>
+      </section>
+
+      <h2>Answer</h2>
+      <p>The graph has two removable discontinuities. The first is at x equals minus three where the y-value is undefined, so you will not hear any sound at the point. The second is at x equals four where the y-value becomes larger, so you will hear higher pitch at the point.</p>
+      <p>There is also a jump discontinuity in this graph at x equals minus two, which is not asked in this question.</p>
+
+      <h2>Explanation</h2>
+      <p>The graph consists of two segments.</p>
+      <p>The shape of the first segment is a straight line with a slope of minus two. It begins at x equals minus five and y equals two. As it moves to right, the graph begins to decreas and there is a removable discontinuity at x equals minus three where the y-value is undefined. The first segment ends at x is less than minus two and y is less than four.</p>
+      <p>There is a jump discontinuity at x equals minus two. The y-value jumps from minus four to about minus two.</p>
+      <p>The shape of the second segment is a wave that oscillates betweel minus two and two. The graph begins x equals minus two and y is larger than minus two. As it moves to the right, the graph initially decreases, then increases until it reaches x is close to two and y is close to two, then decreases again. There is a removable discontinuity at x equals four where the y-value becomes two at the point.</p>
+
+      <p><a href="../index.html">Back to top</a></p>     
+      </section>
   	</main>
 	</body>
 </html>
